--- a/package.json
+++ b/package.json
@@ -2,33 +2,34 @@
   "name": "script-communicator-x",
   "version": "0.0.0",
   "scripts": {
-    "start": "cd script-communicator-x-frontend && npm run start",
-    "install-frontend": "cd script-communicator-x-frontend && npm install",
-    "install-backend": "cd script-communicator-x-backend && npm install",
-    "lint": "cd script-communicator-x-frontend && npm run lint",
+    "start": "npm run start --prefix script-communicator-x-frontend",
+    "install-frontend": "npm install --prefix script-communicator-x-frontend",
+    "install-backend": "npm install --prefix script-communicator-x-backend",
+    "lint": "npm run lint --prefix script-communicator-x-frontend",
     "postinstall": "npm run install-frontend && npm run install-backend",
-    "prebuild": "npm run clean-dist && npm run clean-target",
+    "prebuild": "npm run clean-dist && npm run clean-target && npm run validate-manifest",
     "build-arm": "export ARCH=linux/arm64 && npm run build",
     "build": "npm run build-backend && npm run build-frontend",
     "postbuild": "npm run package",
     "build-backend": "npm run build --prefix script-communicator-x-backend",
     "build-frontend": "npm run build --prefix script-communicator-x-frontend",
-    "prepackage": "mkdir dist && npm run copy-backend && npm run copy-frontend && npm run copy-manifest && npm run copy-license && npm run write-requirements",
+    "prepackage": "mkdir dist && npm run copy-backend && npm run copy-frontend && npm run copy-manifest && npm run copy-license && npm run write-sbom",
     "package": "package-urcap dist target",
-    "copy-backend": "cpy \"script-communicator-x-backend/dist/*\" dist/script-communicator-x-backend",
-    "copy-frontend": "cpy \"script-communicator-x-frontend/**/*\" ../../dist --parents --cwd=script-communicator-x-frontend/dist",
-    "copy-manifest": "cpy manifest.yaml dist",
-    "write-requirements": "write-ur-packages ./script-communicator-x-frontend/package.json dist/requirements.txt",
-    "copy-license": "cpy LICENSE dist",
+    "copy-backend": "ncp 'script-communicator-x-backend/dist' 'dist/script-communicator-x-backend'",
+    "copy-frontend": "ncp 'script-communicator-x-frontend/dist' 'dist'",
+    "copy-manifest": "ncp 'manifest.yaml' 'dist/manifest.yaml'",
+    "copy-license": "ncp 'LICENSE' 'dist/LICENSE'",
+    "write-sbom": "write-ur-packages ./script-communicator-x-frontend/package-lock.json dist",
     "clean-dist": "rimraf dist",
     "clean-target": "rimraf target",
-    "install-urcap": "install-urcap 'target/script-communicator-x*.urcapx'",
-    "delete-urcap": "delete-urcap funh script-communicator-x"
+    "install-urcap": "install-urcap 'target/script-communicator-x*.urcapx' '../../manifest-spec-19.6.12.json'",
+    "delete-urcap": "delete-urcap funh script-communicator-x",
+    "validate-manifest": "validate-manifest 'manifest.yaml' '../../manifest-spec-19.6.12.json'"
   },
   "private": true,
   "devDependencies": {
-    "@universal-robots/urcap-utils": "1.2.1",
-    "rimraf": "3.0.2",
-    "cpy-cli": "3.1.1"
+    "@universal-robots/urcap-utils": "1.6.4",
+    "ncp": "2.0.0",
+    "rimraf": "5.0.7"
   }
 }
