--- a/script-communicator-x-frontend/package.json
+++ b/script-communicator-x-frontend/package.json
@@ -7,44 +7,45 @@
     "prebuild": "npm run generatepath",
     "build": "ng build --configuration=production",
     "lint": "ng lint",
+    "lint:fix": "ng lint --fix",
     "generatepath": "generate-manifest-constants ../manifest.yaml"
   },
   "private": true,
   "license": "Apache-2.0",
   "dependencies": {
-    "@angular/animations": "19.0.5",
-    "@angular/cdk": "19.0.4",
-    "@angular/common": "19.0.5",
-    "@angular/compiler": "19.0.5",
-    "@angular/core": "19.0.5",
-    "@angular/elements": "19.0.5",
-    "@angular/platform-browser": "19.0.5",
-    "@angular/platform-browser-dynamic": "19.0.5",
-    "@angular/router": "19.0.5",
+    "@angular/animations": "19.2.4",
+    "@angular/cdk": "19.2.7",
+    "@angular/common": "19.2.4",
+    "@angular/compiler": "19.2.4",
+    "@angular/core": "19.2.4",
+    "@angular/elements": "19.2.4",
+    "@angular/platform-browser": "19.2.4",
+    "@angular/platform-browser-dynamic": "19.2.4",
+    "@angular/router": "19.2.4",
     "@ngx-translate/core": "15.0.0",
-    "@universal-robots/ui-angular-components": "3.1.7",
+    "@universal-robots/ui-angular-components": "4.1.0",
     "ngx-translate-multi-http-loader": "17.0.0",
     "rxjs": "7.8.1",
     "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.0.5",
-    "@angular-eslint/builder": "~19.0.2",
-    "@angular-eslint/eslint-plugin": "~19.0.2",
-    "@angular-eslint/eslint-plugin-template": "~19.0.2",
-    "@angular-eslint/schematics": "~19.0.2",
-    "@angular-eslint/template-parser": "~19.0.2",
-    "@angular/cli": "19.0.5",
-    "@angular/compiler-cli": "19.0.5",
-    "@angular/language-service": "19.0.5",
+    "@angular-devkit/build-angular": "19.2.4",
+    "@angular-eslint/builder": "~19.3.0",
+    "@angular-eslint/eslint-plugin": "~19.3.0",
+    "@angular-eslint/eslint-plugin-template": "~19.3.0",
+    "@angular-eslint/schematics": "~19.3.0",
+    "@angular-eslint/template-parser": "~19.3.0",
+    "@angular/cli": "19.2.4",
+    "@angular/compiler-cli": "19.2.4",
+    "@angular/language-service": "19.2.4",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
-    "@universal-robots/contribution-api": "42.2.3",
-    "@universal-robots/urcap-utils": "1.2.1",
-    "@universal-robots/utilities-units": "5.8.0",
-    "@universal-robots/designtokens": "0.12.1",
-    "@universal-robots/ui-models": "0.24.1",
+    "@universal-robots/contribution-api": "48.4.1",
+    "@universal-robots/designtokens": "0.17.0",
+    "@universal-robots/ui-models": "0.34.0",
+    "@universal-robots/urcap-utils": "1.6.4",
+    "@universal-robots/utilities-units": "5.12.0",
     "eslint": "8.57.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
@@ -53,10 +54,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ngx-build-plus": "^19.0.0",
-    "typescript": "5.6.3",
-    "jszip": "3.10.1"
+    "typescript": "5.7.3"
   },
   "peerDependencies": {
-    "domhandler": "^5.0.3"
+    "domhandler": "5.0.3"
   }
 }
