--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "clean-dist": "rimraf dist",
     "clean-target": "rimraf target",
     "clean-urcap": "rimraf script-communicator-x-backend/package-lock.json && rimraf script-communicator-x-backend/node_modules && rimraf script-communicator-x-frontend/package-lock.json && rimraf script-communicator-x-frontend/node_modules && rimraf package-lock.json && rimraf node_modules",
-    "install-urcap": "install-urcap 'target/script-communicator-x*.urcapx' '../../manifest-spec-19.6.12.json'",
+    "install-urcap": "install-urcap 'target/script-communicator-x*.urcapx' '../manifest-spec-19.9.9.json'",
     "delete-urcap": "delete-urcap funh script-communicator-x",
-    "validate-manifest": "validate-manifest 'manifest.yaml' '../../manifest-spec-19.6.12.json'"
+    "validate-manifest": "validate-manifest 'manifest.yaml' '../manifest-spec-19.9.9.json'"
   },
   "private": true,
   "devDependencies": {
-    "@universal-robots/urcap-utils": "1.6.4",
+    "@universal-robots/urcap-utils": "2.0.1",
     "ncp": "2.0.0",
     "rimraf": "5.0.7"
   }
